Resolving function for top syntactic objects. Refining function for top syntactic subjects, given verb.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b9ed11f3",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7ad318b6",
    "metadata": {},
    "outputs": [],
@@ -484,33 +484,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "db45c65e",
+   "execution_count": null,
+   "id": "d35e3296",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter \n",
+    "from collections import Counter\n",
+    "def find_objects(token):\n",
+    "    ''' Function to find the objects of a token  '''\n",
+    "    objects = set()\n",
+    "    if 'obj' in token.dep_:\n",
+    "        objects.add(token)\n",
+    "    return objects\n",
     "\n",
-    "def extract_top_n_pos(doc, n, output_type, with_punct):\n",
-    "    if with_punct:\n",
-    "        pos_counts = Counter([token.pos_ for token in doc])\n",
-    "    else: # * without punctuation\n",
-    "        pos_counts = Counter([token.pos_ for token in doc if token.pos_ != 'PUNCT'])\n",
-    "    if output_type == 'list':\n",
-    "        return [pos for pos, count in pos_counts.most_common()][:n]\n",
-    "    elif output_type == 'pairs':\n",
-    "        return pos_counts.most_common()[:n]\n",
     "\n",
-    "def print_title_top_pos(df, n=10, output_type = 'list', with_punct=True):\n",
-    "    top_dict = dict()\n",
-    "    for i in range(len(df)):\n",
-    "        n_pos = extract_top_n_pos(df['docs'][i], n, output_type, with_punct)\n",
-    "        top_dict[df['title'][i]] = n_pos\n",
-    "    for key, value in top_dict.items():\n",
-    "        print(f\"{key}: {value}\")\n",
-    "    \n",
-    "# print_title_top_pos(df) # * default - title: list of top POS (including punctuation)\n",
-    "# print_title_top_pos(df, output_type='pairs', with_punct=False) # * call to show POS type and count value (tuples), excluding punctuation"
+    "\n",
+    "def objects_count(doc, n=10):\n",
+    "    object_text = []\n",
+    "\n",
+    "    for token in doc:\n",
+    "        objects = find_objects(token)\n",
+    "        if objects:\n",
+    "            object_text.extend([objects.text.lower() for objects in objects]) #? have made this lower, to not duplicate the types\n",
+    "\n",
+    "    object_counts = Counter(object_text)\n",
+    "    return  object_counts.most_common()[:n]\n",
+    "# doc = nlp(\"We have never finished Hamlet, Marianne; our dear Willoughby went away before we could get through it. Before the middle of the day, they were visited by Sir John and Mrs. Jennings, who, having heard of the arrival of a gentleman at the cottage, came to take a survey of the guest.\")\n",
+    "objects_count(df['docs'][0])"
    ]
   },
   {
@@ -518,27 +518,7 @@
    "execution_count": null,
    "id": "884d607e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('old', 253),\n",
-       " ('small', 153),\n",
-       " ('other', 153),\n",
-       " ('dead', 129),\n",
-       " ('little', 127),\n",
-       " ('dark', 120),\n",
-       " ('naked', 91),\n",
-       " ('great', 89),\n",
-       " ('black', 86),\n",
-       " ('more', 77)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -556,7 +536,7 @@
    "id": "257f8de6",
    "metadata": {},
    "source": [
-    "### - ii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their frequency. \n"
+    "### ii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their frequency. \n"
    ]
   },
   {
@@ -566,72 +546,44 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sense_and_Sensibility\n",
-      "[('I', 28), ('you', 18), ('she', 13), ('Elinor', 6), ('he', 5), ('they', 4), ('me', 4), ('Jennings', 3)]\n",
-      "\n",
-      "\n",
-      "North_and_South\n",
-      "[('she', 43), ('I', 42), ('he', 20), ('She', 17), ('you', 14), ('they', 11), ('Margaret', 10), ('me', 5), ('we', 5), ('He', 3), ('Thornton', 3), ('who', 3), ('They', 2), ('yo', 2), ('one', 2)]\n",
-      "\n",
-      "\n",
-      "A_Tale_of_Two_Cities\n",
-      "[('I', 21), ('he', 16), ('she', 9), ('you', 8), ('You', 4), ('they', 4), ('He', 3), ('Monseigneur', 2), ('me', 2)]\n",
-      "\n",
-      "\n",
-      "Erewhon\n",
-      "[('I', 38), ('he', 3), ('they', 3), ('she', 2)]\n",
-      "\n",
-      "\n",
-      "The_American\n",
-      "[('he', 16), ('I', 13), ('you', 10), ('Newman', 5), ('she', 4), ('He', 2), ('We', 2)]\n",
-      "\n",
-      "\n",
-      "Dorian_Gray\n",
-      "[('I', 24), ('he', 11), ('He', 5), ('you', 3), ('one', 2)]\n",
-      "\n",
-      "\n",
-      "Tess_of_the_DUrbervilles\n",
-      "[('she', 28), ('I', 20), ('She', 10), ('they', 8), ('you', 7), ('he', 6), ('who', 6), ('Tess', 5), ('They', 4), ('Clare', 4), ('lady', 2), ('He', 2)]\n",
-      "\n",
-      "\n",
-      "The_Golden_Bowl\n",
-      "[('she', 13), ('you', 5), ('he', 5), ('She', 3), ('Maggie', 2), ('him', 2)]\n",
-      "\n",
-      "\n",
-      "The_Secret_Garden\n",
-      "[('I', 28), ('she', 18), ('he', 15), ('She', 7), ('you', 7), ('we', 6), ('Mary', 3), ('they', 3), ('Lennox', 2), ('Colin', 2), ('one', 2), ('Medlock', 2)]\n",
-      "\n",
-      "\n",
-      "Portrait_of_the_Artist\n",
-      "[('he', 46), ('He', 15), ('you', 10), ('I', 8), ('Stephen', 5), ('voice', 3), ('You', 2)]\n",
-      "\n",
-      "\n",
-      "The_Black_Moth\n",
-      "[('I', 37), ('you', 5), ('he', 4), ('We', 3), ('Richard', 2)]\n",
-      "\n",
-      "\n",
-      "Orlando\n",
-      "[('she', 17), ('he', 8), ('Orlando', 5), ('She', 5), ('they', 3), ('one', 3), ('I', 2)]\n",
-      "\n",
-      "\n",
-      "Blood_Meridian\n",
-      "[('he', 19), ('they', 19), ('I', 6), ('He', 6), ('you', 3), ('They', 2), ('You', 2), ('she', 2), ('who', 2), ('We', 2), ('man', 2)]\n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('i', 21),\n",
+       " ('he', 19),\n",
+       " ('you', 12),\n",
+       " ('she', 10),\n",
+       " ('they', 5),\n",
+       " ('monseigneur', 2),\n",
+       " ('me', 2),\n",
+       " ('one', 1),\n",
+       " ('jerry', 1),\n",
+       " ('stranger', 1),\n",
+       " ('clink', 1),\n",
+       " ('echoes', 1),\n",
+       " ('we', 1),\n",
+       " ('her', 1),\n",
+       " ('mother', 1),\n",
+       " ('lucie', 1),\n",
+       " ('jar', 1),\n",
+       " ('him', 1),\n",
+       " ('darnay', 1),\n",
+       " ('d’ye', 1),\n",
+       " ('voice', 1),\n",
+       " ('sound', 1),\n",
+       " ('his', 1),\n",
+       " ('matter', 1),\n",
+       " ('pross', 1)]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def find_subjects(token):\n",
     "    ''' Function to find the subjects of a token - both up and down the parse tree '''\n",
     "    subjects = []\n",
-    "    ''' Token's parent '''\n",
-    "    if 'subj' in token.head.dep_:\n",
-    "        subjects.append(token.head)\n",
-    "    \n",
     "    ''' Token's children '''\n",
     "    for child in token.children:\n",
     "        if 'subj' in child.dep_:\n",
@@ -650,8 +602,7 @@
     "        if token.pos_ == \"VERB\" and token.lemma_ == verb:\n",
     "            subjects = find_subjects(token)\n",
     "            if subjects:\n",
-    "                subject_text.extend([subject.text for subject in subjects])\n",
-    "\n",
+    "                subject_text.extend([subject.text.lower() for subject in subjects])\n",
     "    subject_counts = Counter(subject_text)\n",
     "    subject_counts = subject_counts.most_common()\n",
     "    if trim_singles:\n",
@@ -661,12 +612,15 @@
     "\n",
     "\n",
     "\n",
+    "# doc = df['docs'][2]\n",
+    "# # doc=nlp(\"To hear is vital for him\")\n",
+    "# # subjects_by_verb_count(doc, 'hear')\n",
+    "# subjects_by_verb_count(doc,'hear', trim_singles=False)\n",
     "\n",
-    "\n",
-    "for i, row in df.iterrows():\n",
-    "    print(row[\"title\"])\n",
-    "    print(subjects_by_verb_count(row[\"docs\"], \"hear\"))\n",
-    "    print(\"\\n\")"
+    "# for i, row in df.iterrows():\n",
+    "#     print(row[\"title\"])\n",
+    "#     print(subjects_by_verb_count(row[\"docs\"], \"hear\"))\n",
+    "#     print(\"\\n\")"
    ]
   },
   {
