--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -825,6 +825,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc6f06ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
+    "# skf = StratifiedKFold(n_splits=2, shuffle=True, random_state=random_seed)\n",
+    "# next(skf.split(df), None)\n",
+    "\n",
+    "random_seed = 26\n",
+    "max_features = 3000\n",
+    "\n",
+    "tfidf_vectorizer = TfidfVectorizer(stop_words=\"english\",max_features=max_features)\n",
+    "tfidf = tfidf_vectorizer.fit_transform(df.speech) \n",
+    "X_train, X_test, y_train, y_test = train_test_split(tfidf, df.party, random_state=random_seed, shuffle=True, stratify=df.party)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b58c2f73",
    "metadata": {},
