2.c Random forest and SVM linear classifiers, printing F1 and classification report

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -852,6 +852,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af3f7103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import f1_score,  classification_report\n",
+    "from sklearn import svm\n",
+    "rfc = RandomForestClassifier(random_state=random_seed)\n",
+    "n_estimators = 300\n",
+    "\n",
+    "rfc_fitted = rfc.fit(X_train, y_train)\n",
+    "\n",
+    "print(f1_score(y_test, rfc_fitted.predict(X_test), average='macro'))\n",
+    "# params (y_true, y_predicted)\n",
+    "print(classification_report(y_test, rfc.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da9ee15c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_svc = svm.SVC(kernel='linear')\n",
+    "linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
+    "linear_svc_fitted.predict(X_test)\n",
+    "\n",
+    "print(f1_score(y_test, linear_svc.predict(X_test), average='macro'))\n",
+    "print(classification_report(y_test, linear_svc_fitted.predict(X_test)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5885cf15",
    "metadata": {},
