Adding a function to remove chapter headings with regex (could be refinded for other breaks)

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b9ed11f3",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
     "\n",
     "import pandas as pd\n",
     "import os\n",
-    "\n",
+    "import re\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "nlp.max_length = 2000000\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e8c1eb6e",
    "metadata": {},
    "outputs": [],
@@ -88,6 +88,11 @@
     "def read_file(filename):\n",
     "    with open(filename, 'r') as f:\n",
     "        return f.read()\n",
+    "\n",
+    "def remove_chapter_headings(text):\n",
+    "    pattern = r'(?i)CHAPTER \\d+'  #* adding this so that chapter breaks are not counted. could be refined for section breaks etc.\n",
+    "    return re.sub(pattern, '', text)\n",
+    "\n",
     "\n",
     "def read_novels(path=Path.cwd() / \"zips\" / \"p1-texts\" / \"novels\"):\n",
     "    \"\"\"Reads texts from a directory of .txt files and returns a DataFrame with the text, title,\n",
@@ -104,7 +109,10 @@
     "        file_dict['author'] = author\n",
     "        file_dict['year'] = year[:-4]\n",
     "        df_data.append(file_dict)\n",
-    "    df = pd.DataFrame(df_data)     \n",
+    "    df = pd.DataFrame(df_data)\n",
+    "    df['text_c'] = df['text'].copy() # retain original copy\n",
+    "    df['text'] = df['text'].apply(lambda x: remove_chapter_headings(x).strip()) # apply function to all items in text column\n",
+    "    df = df[['text_c','text', 'title', 'author', 'year']] # reorder columns\n",
     "    df = df.sort_values('year') # return sorted by year (assumed default ascending)\n",
     "    df.reset_index(inplace=True, drop=True)     \n",
     "    return df     \n",
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "e1beddc4",
    "metadata": {},
    "outputs": [
@@ -139,6 +147,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>text_c</th>\n",
        "      <th>text</th>\n",
        "      <th>title</th>\n",
        "      <th>author</th>\n",
@@ -149,12 +158,14 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>\\nCHAPTER 1\\n\\nThe family of Dashwood had long...</td>\n",
+       "      <td>The family of Dashwood had long been settled i...</td>\n",
        "      <td>Sense_and_Sensibility</td>\n",
        "      <td>Austen</td>\n",
        "      <td>1811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>'Wooed and married and a'.'\\n'Edith!' said Mar...</td>\n",
        "      <td>'Wooed and married and a'.'\\n'Edith!' said Mar...</td>\n",
        "      <td>North_and_South</td>\n",
        "      <td>Gaskell</td>\n",
@@ -165,8 +176,12 @@
        "</div>"
       ],
       "text/plain": [
+       "                                              text_c  \\\n",
+       "0  \\nCHAPTER 1\\n\\nThe family of Dashwood had long...   \n",
+       "1  'Wooed and married and a'.'\\n'Edith!' said Mar...   \n",
+       "\n",
        "                                                text                  title  \\\n",
-       "0  \\nCHAPTER 1\\n\\nThe family of Dashwood had long...  Sense_and_Sensibility   \n",
+       "0  The family of Dashwood had long been settled i...  Sense_and_Sensibility   \n",
        "1  'Wooed and married and a'.'\\n'Edith!' said Mar...        North_and_South   \n",
        "\n",
        "    author  year  \n",
@@ -174,7 +189,7 @@
        "1  Gaskell  1855  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
