Functions to get verbs and verb counts For calculating probability

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -716,10 +716,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d35e3296",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('it', 706),\n",
+       " ('her', 689),\n",
+       " ('him', 521),\n",
+       " ('them', 404),\n",
+       " ('me', 343),\n",
+       " ('you', 331),\n",
+       " ('which', 251),\n",
+       " ('what', 210),\n",
+       " ('time', 193),\n",
+       " ('herself', 193)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "def find_objects(token):\n",
@@ -774,42 +794,114 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "905dd967",
+   "id": "bb8c2cda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_verbs(doc):\n",
+    "    verbs = []\n",
+    "    for token in doc:\n",
+    "        if token.pos_ == 'VERB' and token.lemma_=='hear':\n",
+    "            verb = token.text.lower()\n",
+    "            verbs.append(verb)\n",
+    "    verb_counts =Counter(verbs)\n",
+    "    return verb_counts #~ retains the original verb form, returns their frequency\n",
+    "\n",
+    "def sum_verbs(doc, verb='hear'):\n",
+    "    ''' Get the total sum of verbs matched with given lemma '''\n",
+    "    verb_counts = get_verbs(doc)\n",
+    "    return (verb, sum(verb_counts.values()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd7c70c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('i', 21),\n",
-       " ('he', 19),\n",
-       " ('you', 12),\n",
-       " ('she', 10),\n",
-       " ('they', 5),\n",
-       " ('monseigneur', 2),\n",
-       " ('me', 2),\n",
-       " ('one', 1),\n",
-       " ('jerry', 1),\n",
-       " ('stranger', 1),\n",
-       " ('clink', 1),\n",
-       " ('echoes', 1),\n",
-       " ('we', 1),\n",
-       " ('her', 1),\n",
-       " ('mother', 1),\n",
-       " ('lucie', 1),\n",
-       " ('jar', 1),\n",
-       " ('him', 1),\n",
-       " ('darnay', 1),\n",
-       " ('d’ye', 1),\n",
-       " ('voice', 1),\n",
-       " ('sound', 1),\n",
-       " ('his', 1),\n",
-       " ('matter', 1),\n",
-       " ('pross', 1)]"
+       "Counter({'heard': 78, 'hear': 69, 'hearing': 22, 'hears': 1})"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Testing functions\n",
+    "# get_verbs(df['docs'][0])\n",
+    "# #* Counter({'heard': 78, 'hear': 69, 'hearing': 22, 'hears': 1})\n",
+    "\n",
+    "# sum_verbs(df['docs'][1])\n",
+    "# #* ('hear', 276)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905dd967",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sense_and_Sensibility\n",
+      "[('i', 28), ('you', 19), ('she', 14), ('elinor', 6), ('he', 6), ('they', 5), ('me', 4), ('jennings', 3)]\n",
+      "\n",
+      "\n",
+      "North_and_South\n",
+      "[('she', 60), ('i', 42), ('he', 23), ('you', 15), ('they', 13), ('margaret', 10), ('me', 5), ('we', 5), ('thornton', 3), ('who', 3)]\n",
+      "\n",
+      "\n",
+      "A_Tale_of_Two_Cities\n",
+      "[('i', 21), ('he', 19), ('you', 12), ('she', 10), ('they', 5), ('monseigneur', 2), ('me', 2)]\n",
+      "\n",
+      "\n",
+      "Erewhon\n",
+      "[('i', 38), ('he', 4), ('they', 3), ('she', 2)]\n",
+      "\n",
+      "\n",
+      "The_American\n",
+      "[('he', 18), ('i', 13), ('you', 10), ('she', 5), ('newman', 4), ('they', 2), ('we', 2)]\n",
+      "\n",
+      "\n",
+      "Dorian_Gray\n",
+      "[('i', 24), ('he', 16), ('one', 3), ('you', 3)]\n",
+      "\n",
+      "\n",
+      "Tess_of_the_DUrbervilles\n",
+      "[('she', 37), ('i', 20), ('they', 12), ('he', 8), ('you', 8), ('who', 6), ('tess', 4), ('clare', 4), ('lady', 2)]\n",
+      "\n",
+      "\n",
+      "The_Golden_Bowl\n",
+      "[('she', 16), ('he', 6), ('you', 5), ('maggie', 2), ('him', 2)]\n",
+      "\n",
+      "\n",
+      "The_Secret_Garden\n",
+      "[('i', 28), ('she', 25), ('he', 16), ('you', 8), ('we', 6), ('mary', 3), ('they', 3), ('lennox', 2), ('colin', 2), ('one', 2)]\n",
+      "\n",
+      "\n",
+      "Portrait_of_the_Artist\n",
+      "[('he', 62), ('you', 12), ('i', 8), ('stephen', 5), ('voice', 3), ('they', 2), ('who', 2)]\n",
+      "\n",
+      "\n",
+      "The_Black_Moth\n",
+      "[('i', 37), ('he', 5), ('you', 5), ('we', 4), ('richard', 2), ('she', 2)]\n",
+      "\n",
+      "\n",
+      "Orlando\n",
+      "[('she', 22), ('he', 8), ('orlando', 5), ('they', 3), ('one', 3), ('i', 2)]\n",
+      "\n",
+      "\n",
+      "Blood_Meridian\n",
+      "[('he', 25), ('they', 21), ('i', 6), ('you', 5), ('who', 3), ('she', 2), ('all', 2), ('we', 2), ('man', 2)]\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -822,7 +914,7 @@
     "            subjects.append(child)\n",
     "    return subjects\n",
     "\n",
-    "def subjects_by_verb_count(doc, verb, trim_singles=True):\n",
+    "def subjects_by_verb_count(doc, verb, trim_singles=True, n=10):\n",
     "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
     "    ''' Added a parameter to remove multiple counts of 1 in the most frequent.\n",
     "    > Setting to n=10 sliced the list by order, which didn't have much meaning in the returned values\n",
@@ -836,7 +928,7 @@
     "            if subjects:\n",
     "                subject_text.extend([subject.text.lower() for subject in subjects])\n",
     "    subject_counts = Counter(subject_text)\n",
-    "    subject_counts = subject_counts.most_common()\n",
+    "    subject_counts = subject_counts.most_common()[:n]\n",
     "    if trim_singles:\n",
     "        return [x for x in subject_counts if x[1] >1]\n",
     "    else:\n",
