Verb counts amend - to pass default param

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -798,10 +798,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_verbs(doc):\n",
+    "def get_verbs(doc, verb='hear'):\n",
     "    verbs = []\n",
     "    for token in doc:\n",
-    "        if token.pos_ == 'VERB' and token.lemma_=='hear':\n",
+    "        if token.pos_ == 'VERB' and token.lemma_==verb:\n",
     "            verb = token.text.lower()\n",
     "            verbs.append(verb)\n",
     "    verb_counts =Counter(verbs)\n",
