Initial workings on probabilities.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "bb8c2cda",
    "metadata": {},
    "outputs": [],
@@ -802,8 +802,8 @@
     "    verbs = []\n",
     "    for token in doc:\n",
     "        if token.pos_ == 'VERB' and token.lemma_==verb:\n",
-    "            verb = token.text.lower()\n",
-    "            verbs.append(verb)\n",
+    "\n",
+    "            verbs.append(token.text.lower())\n",
     "    verb_counts =Counter(verbs)\n",
     "    return verb_counts #~ retains the original verb form, returns their frequency\n",
     "\n",
@@ -825,7 +825,7 @@
        "Counter({'heard': 78, 'hear': 69, 'hearing': 22, 'hears': 1})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,78 +841,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "905dd967",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sense_and_Sensibility\n",
-      "[('i', 28), ('you', 19), ('she', 14), ('elinor', 6), ('he', 6), ('they', 5), ('me', 4), ('jennings', 3)]\n",
-      "\n",
-      "\n",
-      "North_and_South\n",
-      "[('she', 60), ('i', 42), ('he', 23), ('you', 15), ('they', 13), ('margaret', 10), ('me', 5), ('we', 5), ('thornton', 3), ('who', 3)]\n",
-      "\n",
-      "\n",
-      "A_Tale_of_Two_Cities\n",
-      "[('i', 21), ('he', 19), ('you', 12), ('she', 10), ('they', 5), ('monseigneur', 2), ('me', 2)]\n",
-      "\n",
-      "\n",
-      "Erewhon\n",
-      "[('i', 38), ('he', 4), ('they', 3), ('she', 2)]\n",
-      "\n",
-      "\n",
-      "The_American\n",
-      "[('he', 18), ('i', 13), ('you', 10), ('she', 5), ('newman', 4), ('they', 2), ('we', 2)]\n",
-      "\n",
-      "\n",
-      "Dorian_Gray\n",
-      "[('i', 24), ('he', 16), ('one', 3), ('you', 3)]\n",
-      "\n",
-      "\n",
-      "Tess_of_the_DUrbervilles\n",
-      "[('she', 37), ('i', 20), ('they', 12), ('he', 8), ('you', 8), ('who', 6), ('tess', 4), ('clare', 4), ('lady', 2)]\n",
-      "\n",
-      "\n",
-      "The_Golden_Bowl\n",
-      "[('she', 16), ('he', 6), ('you', 5), ('maggie', 2), ('him', 2)]\n",
-      "\n",
-      "\n",
-      "The_Secret_Garden\n",
-      "[('i', 28), ('she', 25), ('he', 16), ('you', 8), ('we', 6), ('mary', 3), ('they', 3), ('lennox', 2), ('colin', 2), ('one', 2)]\n",
-      "\n",
-      "\n",
-      "Portrait_of_the_Artist\n",
-      "[('he', 62), ('you', 12), ('i', 8), ('stephen', 5), ('voice', 3), ('they', 2), ('who', 2)]\n",
-      "\n",
-      "\n",
-      "The_Black_Moth\n",
-      "[('i', 37), ('he', 5), ('you', 5), ('we', 4), ('richard', 2), ('she', 2)]\n",
-      "\n",
-      "\n",
-      "Orlando\n",
-      "[('she', 22), ('he', 8), ('orlando', 5), ('they', 3), ('one', 3), ('i', 2)]\n",
-      "\n",
-      "\n",
-      "Blood_Meridian\n",
-      "[('he', 25), ('they', 21), ('i', 6), ('you', 5), ('who', 3), ('she', 2), ('all', 2), ('we', 2), ('man', 2)]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def find_subjects(token):\n",
+    "# def find_subjects(token):\n",
+    "#     ''' Function to find the subjects of a token - both up and down the parse tree '''\n",
+    "#     subjects = []\n",
+    "#     ''' Token's children '''\n",
+    "#     for child in token.children:\n",
+    "#         if 'subj' in child.dep_:\n",
+    "#             subjects.append(child)\n",
+    "#     return subjects\n",
+    "\n",
+    "def find_subjects(doc, original_verbs, match_verb):\n",
     "    ''' Function to find the subjects of a token - both up and down the parse tree '''\n",
     "    subjects = []\n",
     "    ''' Token's children '''\n",
-    "    for child in token.children:\n",
-    "        if 'subj' in child.dep_:\n",
-    "            subjects.append(child)\n",
-    "    return subjects\n",
+    "    for token in doc:\n",
+    "        if token.text in original_verbs and token.lemma_ ==match_verb:\n",
+    "            for child in token.children:\n",
+    "                if 'subj' in child.dep_:\n",
+    "                    child = child.text.lower()\n",
+    "                    subjects.append(f\"{child}, {token.text}\")\n",
+    "    return subjects\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c177d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21710c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# doc=df['docs'][0]\n",
+    "verb_counts = get_verbs(doc)\n",
+    "verb_probs = [(k,round(v/sum(verb_counts.values()),6)) for k,v in verb_counts.items()]\n",
+    "\n",
+    "subjects = find_subjects(\n",
+    "    doc, \n",
+    "    original_verbs=[verb_prob[0] for verb_prob in verb_probs],\n",
+    "    match_verb='hear')\n",
+    "\n",
+    "df_s = pd.DataFrame(subjects, columns=['pairs'])\n",
+    "df_s[['subject', 'verb']] = df_s['pairs'].str.split(',', expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6102396",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "8a22a02f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pairs</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>verb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>she, hear</td>\n",
+       "      <td>she</td>\n",
+       "      <td>hear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>they, heard</td>\n",
+       "      <td>they</td>\n",
+       "      <td>heard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>brandon, heard</td>\n",
+       "      <td>brandon</td>\n",
+       "      <td>heard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>you, hear</td>\n",
+       "      <td>you</td>\n",
+       "      <td>hear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>she, heard</td>\n",
+       "      <td>she</td>\n",
+       "      <td>heard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>she, heard</td>\n",
+       "      <td>she</td>\n",
+       "      <td>heard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>herself, heard</td>\n",
+       "      <td>herself</td>\n",
+       "      <td>heard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>edward, heard</td>\n",
+       "      <td>edward</td>\n",
+       "      <td>heard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>who, heard</td>\n",
+       "      <td>who</td>\n",
+       "      <td>heard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>willoughby, hear</td>\n",
+       "      <td>willoughby</td>\n",
+       "      <td>hear</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                pairs     subject    verb\n",
+       "0           she, hear         she    hear\n",
+       "1         they, heard        they   heard\n",
+       "2      brandon, heard     brandon   heard\n",
+       "3           you, hear         you    hear\n",
+       "4          she, heard         she   heard\n",
+       "..                ...         ...     ...\n",
+       "98         she, heard         she   heard\n",
+       "99     herself, heard     herself   heard\n",
+       "100     edward, heard      edward   heard\n",
+       "101        who, heard         who   heard\n",
+       "102  willoughby, hear  willoughby    hear\n",
+       "\n",
+       "[103 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6364387d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def subjects_by_verb_count(doc, verb, trim_singles=True, n=10):\n",
     "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
@@ -934,6 +1062,28 @@
     "    else:\n",
     "        return  subject_counts\n",
     "\n",
+    "subjects_by_verb_count(df['docs'][0], verb='hear')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fd8b663a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'hear': 3, 'heard': 1})"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_verbs(df['docs'][0], verb='hear')\n",
     "\n",
     "\n",
     "# doc = df['docs'][2]\n",
