Function for counting unique words in a document Plus adding a doc string to another function

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -793,12 +793,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "id": "da69a3f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def freq_counter_dict_words(doc):\n",
+    "    ''' \n",
+    "    Returns a counter dictionary object for the words in the document \n",
+    "    Only considers alphabet-character tokens (alpha) rather than excluding (e.g., with is_punct)\n",
+    "    Use: freq_counter_dict_words(doc)\n",
+    "    '''\n",
+    "    from collections import Counter\n",
+    "\n",
+    "    words = [token.text.lower()\n",
+    "            for token in doc\n",
+    "            if token.is_alpha]\n",
+    "    word_freq = Counter(words)\n",
+    "    return word_freq\n",
+    "# freq_counter_dict_words(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bb8c2cda",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_verbs(doc, verb='hear'):\n",
+    "    ''' Function to get the count of a verb. Retains original form '''\n",
     "    verbs = []\n",
     "    for token in doc:\n",
     "        if token.pos_ == 'VERB' and token.lemma_==verb:\n",
@@ -895,14 +919,6 @@
     "df_s = pd.DataFrame(subjects, columns=['pairs'])\n",
     "df_s[['subject', 'verb']] = df_s['pairs'].str.split(',', expand=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6102396",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
