--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -893,23 +893,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58c177d4",
+   "cell_type": "markdown",
+   "id": "9d03d310",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Ref: *Word Association Norms, Mutual Information and Lexicography*, Church, K. W., and Hanks, P., in Computational Linguistics Volume 16, Number 1, March 1990\n",
+    "\n",
+    "PMI by Church and Hanks definition:\n",
+    "$$PMI = log_2\\bigg(\\frac{P(x,y)}{P(x)P(y)}\\bigg)$$\n",
+    "\n",
+    "In this application, the vocabulary is calculated per document, and total words declared as `N`.\n",
+    "\n",
+    "**Independent Probabilities**\n",
+    "- are calculated as counts - f(x) and f(y) \n",
+    "- normalised to N\n",
+    "- $P(x) = \\frac{f(x)}{N}$ and $P(y) = \\frac{f(y)}{N}$\n",
+    "\n",
+    "**Joint Probabilities**\n",
+    "- are calculated as counts of x and y co-occuring in a window - $f(x,y)$\n",
+    "- using Spacy dependencies limits this to syntactical spans - the sentences of a document\n",
+    "- normalised to N\n",
+    "- $P(x,y) = \\frac{f(x,y)}{N}$"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
+   "id": "58c177d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = sum(freq_counter_dict_words(doc).values()) # unique word total (N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "id": "21710c4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# doc=df['docs'][0]\n",
     "verb_counts = get_verbs(doc)\n",
-    "verb_probs = [(k,round(v/sum(verb_counts.values()),6)) for k,v in verb_counts.items()]\n",
+    "verb_probs = [(k,\n",
+    "    v/N) for k,v in verb_counts.items()]\n",
     "\n",
     "subjects = find_subjects(\n",
     "    doc, \n",
@@ -922,132 +949,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 89,
    "id": "8a22a02f",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pairs</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>verb</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>she, hear</td>\n",
-       "      <td>she</td>\n",
-       "      <td>hear</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>they, heard</td>\n",
-       "      <td>they</td>\n",
-       "      <td>heard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>brandon, heard</td>\n",
-       "      <td>brandon</td>\n",
-       "      <td>heard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>you, hear</td>\n",
-       "      <td>you</td>\n",
-       "      <td>hear</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>she, heard</td>\n",
-       "      <td>she</td>\n",
-       "      <td>heard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>she, heard</td>\n",
-       "      <td>she</td>\n",
-       "      <td>heard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>herself, heard</td>\n",
-       "      <td>herself</td>\n",
-       "      <td>heard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>edward, heard</td>\n",
-       "      <td>edward</td>\n",
-       "      <td>heard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>who, heard</td>\n",
-       "      <td>who</td>\n",
-       "      <td>heard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>willoughby, hear</td>\n",
-       "      <td>willoughby</td>\n",
-       "      <td>hear</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>103 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                pairs     subject    verb\n",
-       "0           she, hear         she    hear\n",
-       "1         they, heard        they   heard\n",
-       "2      brandon, heard     brandon   heard\n",
-       "3           you, hear         you    hear\n",
-       "4          she, heard         she   heard\n",
-       "..                ...         ...     ...\n",
-       "98         she, heard         she   heard\n",
-       "99     herself, heard     herself   heard\n",
-       "100     edward, heard      edward   heard\n",
-       "101        who, heard         who   heard\n",
-       "102  willoughby, hear  willoughby    hear\n",
-       "\n",
-       "[103 rows x 3 columns]"
+       "[('hear', 0.0005847209863988814),\n",
+       " ('heard', 0.0006609889411465616),\n",
+       " ('hearing', 0.00018643277827210713),\n",
+       " ('hears', 8.474217194186686e-06)]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_s"
+    "verb_probs"
    ]
   },
   {
